# AppStore-review-scraper

./: main.py  pyproject.toml
