[tool.poetry]
name = "appstore-review-scraper"
version = "0.1.0"
description = ""
authors = ["NV"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.23.0"
app-store-scraper = "^0.3.5"
oauth2client = "^4.1.3"
gspread = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
